force-app/main/default/objects/afl__Article_Feedback_Values__c/afl__Article_Feedback_Values__c.object-meta.xml
<CustomObject>
    <description>Object that stores article feedback configuration data.</description>
    <label>Article Feedback Values (Deprecated)</label>
    <nameField>
        <label>Article Feedback Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Article Feedback Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>