force-app/main/default/objects/afl__Article_Feedback_Values__c/fields/afl__Active__c.field-meta.xml
<CustomField>
    <fullName>afl__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>