force-app/main/default/objects/afl__Article_Feedback_Values__c/fields/afl__Double_Value_Picklist__c.field-meta.xml
<CustomField>
    <fullName>afl__Double_Value_Picklist__c</fullName>
    <description>Stores both positive and negative picklist values for Article Feedback configuration page</description>
    <inlineHelpText>Stores both positive and negative picklist values for Article Feedback configuration page</inlineHelpText>
    <label>Double Value Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>