force-app/main/default/objects/afl__Article_Feedback_Values__c/fields/afl__Negative__c.field-meta.xml
<CustomField>
    <fullName>afl__Negative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negative</label>
    <type>Checkbox</type>
</CustomField>