force-app/main/default/objects/afl__Article_Feedback_Values__c/fields/afl__Negative_Picklist__c.field-meta.xml
<CustomField>
    <fullName>afl__Negative_Picklist__c</fullName>
    <description>Stores negative picklist values for Article Feedback configuration page</description>
    <inlineHelpText>Stores negative picklist values for Article Feedback configuration page</inlineHelpText>
    <label>Negative Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Enhancement suggestion</fullName>
            </value>
            <value>
                <fullName>Information inaccurate</fullName>
            </value>
            <value>
                <fullName>Link broken</fullName>
            </value>
            <value>
                <fullName>Need to archive</fullName>
            </value>
            <value>
                <fullName>Outdated (needs update)</fullName>
            </value>
            <value>
                <fullName>Poorly written (not clear)</fullName>
            </value>
            <value>
                <fullName>Positive feedback</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>