force-app/main/default/objects/afl__Article_Feedback_Values__c/fields/afl__OrderPositive__c.field-meta.xml
<CustomField>
    <fullName>afl__OrderPositive__c</fullName>
    <label>OrderPositive</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>