force-app/main/default/objects/afl__Article_Feedback_Values__c/fields/afl__Positive__c.field-meta.xml
<CustomField>
    <fullName>afl__Positive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Positive</label>
    <type>Checkbox</type>
</CustomField>