force-app/main/default/objects/afl__Article_Feedback_Values__c/fields/afl__Positive_Picklist__c.field-meta.xml
<CustomField>
    <fullName>afl__Positive_Picklist__c</fullName>
    <description>Stores positive picklist values for Article Feedback configuration page</description>
    <inlineHelpText>Stores positive picklist values for Article Feedback configuration page</inlineHelpText>
    <label>Positive Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Positive feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>