force-app/main/default/objects/afl__Article_Feedback_Values__c/fields/afl__Value__c.field-meta.xml
<CustomField>
    <fullName>afl__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>