force-app/main/default/objects/afl__Article_Feedback_Values__c/listViews/afl__All.listView-meta.xml
<ListView>
    <fullName>afl__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>